Prevent custom scrollbar from scaling with zoom

--- a/css/components/scrollbar.css
+++ b/css/components/scrollbar.css
@@ -3,7 +3,7 @@
 /*****************************************************************/
 
 ::-webkit-scrollbar {
-  width: 10px;
+  height: 16px;
 }
 
 /* Track */
